Search Records Update
 - Added functionality to search history (navigation, removing).

 - Now Search Bar Input is genuinely one component, implemented its slight optimization.
