# src/AuctionApp.React/swagger.json
@@ -1339,6 +1339,28 @@
             "oauth2": [ ]
           }
         ]
+      },
+      "delete": {
+        "tags": [
+          "SearchRecords"
+        ],
+        "operationId": "DeleteAllSearchRecords",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [ ]
+          }
+        ]
       }
     },
     "/SearchRecords/{id}": {
